refactor: 게시판 구조와 연계 흐름 재구성 (#4)
* refactor : 게시판 중심 구조와 연계 흐름을 재구성

- command/query 분리와 컨트롤러 책임 재배치
- 이미지 저장소와 조회 모델, 통계 경계를 게시판 기준으로 정리
- 계정 감사와 북마크, 레시피 연동 코드의 리팩토링 부수 효과 반영

* test : 게시판 리팩토링 검증 범위를 보강

- command/query 분리와 조회 조합 흐름에 대한 단위 및 통합 테스트 추가
- 이미지 스키마 마이그레이션과 동시성 회귀 검증 보강
- 계정 감사와 북마크, 리팩토링 연계 테스트 정비

* fix : 스팟버그 경고를 해소

- nullable Boolean 반환과 감사 인자 처리 경계를 Optional 기반으로 정리

- 썸네일 데이터 싱글턴 생성 경로와 사용자 레시피 댓글의 미사용 private 메서드를 정리

- 관련 테스트를 최신 생성 경로에 맞게 갱신하고 spotbugsMain 통과를 확인

* refactor: README 재작성