@@ -3,17 +3,20 @@ package kwh.PublicCookedFood.board.service;
 import kwh.PublicCookedFood.board.domain.Board;
 import kwh.PublicCookedFood.board.domain.BoardReportReason;
 import kwh.PublicCookedFood.board.domain.BoardReportStatus;
-import kwh.PublicCookedFood.board.domain.SoftDeleteState;
+import kwh.PublicCookedFood.common.persistence.SoftDeleteState;
 import kwh.PublicCookedFood.board.error.BoardErrorCode;
 import kwh.PublicCookedFood.board.repository.BoardReportRepository;
 import kwh.PublicCookedFood.board.repository.BoardRepository;
 import kwh.PublicCookedFood.board.repository.CommentsRepository;
+import kwh.PublicCookedFood.board.service.command.BoardReportCreateCommand;
 import kwh.PublicCookedFood.common.error.AppException;
+import kwh.PublicCookedFood.common.error.CommonErrorCode;
 import kwh.PublicCookedFood.account.service.AccountBlockService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 
 import java.time.LocalDateTime;
+import java.util.Objects;
 
 @Component
 @RequiredArgsConstructor
@@ -30,20 +33,18 @@ public class BoardReportPolicy {
     private final CommentsRepository commentsRepository;
     private final AccountBlockService accountBlockService;
 
-    public void validateCreateRequest(Long boardId, Long reporterId, BoardReportReason reason, String details) {
-        if (boardId == null || reporterId == null) {
-            throw new IllegalArgumentException("신고 요청 값이 올바르지 않습니다.");
-        }
-        if (reason == null) {
-            throw new IllegalArgumentException("신고 사유를 선택해주세요.");
-        }
-        if (reason == BoardReportReason.OTHER && (details == null || details.isBlank())) {
-            throw new IllegalArgumentException("기타 사유는 상세 내용을 입력해주세요.");
+    public void validateCreateRequest(BoardReportCreateCommand command) {
+        if (command.reason() == BoardReportReason.OTHER
+                && (command.details() == null || command.details().trim().isEmpty())) {
+            throw new AppException(CommonErrorCode.INVALID_REQUEST, "기타 사유는 상세 내용을 입력해주세요.");
         }
     }
 
-    public void ensureNotReported(Long boardId, Long reporterId) {
-        if (boardReportRepository.existsByBoardIdAndReporterIdAndStatus(boardId, reporterId, BoardReportStatus.OPEN)) {
+    public void ensureNotReported(BoardReportCreateCommand command) {
+        if (boardReportRepository.existsByBoardIdAndReporterIdAndStatus(
+                command.boardId(),
+                command.reporterId(),
+                BoardReportStatus.OPEN)) {
             throw new AppException(BoardErrorCode.BOARD_REPORT_DUPLICATED);
         }
     }
@@ -67,7 +68,7 @@ public class BoardReportPolicy {
 
     public void ensureReportable(Board board, Long reporterId) {
         if (board.getState() != SoftDeleteState.ACTIVE) {
-            throw new IllegalArgumentException("삭제된 게시글은 신고할 수 없습니다.");
+            throw new AppException(CommonErrorCode.INVALID_REQUEST, "삭제된 게시글은 신고할 수 없습니다.");
         }
         if (board.getAccount() != null && accountBlockService.isEitherBlocked(reporterId, board.getAccount().getId())) {
             throw new AppException(BoardErrorCode.BOARD_REPORT_BLOCKED);
@@ -75,16 +76,15 @@ public class BoardReportPolicy {
         if (board.getAccount() != null
                 && board.getAccount().getId() != null
                 && board.getAccount().getId().equals(reporterId)) {
-            throw new IllegalArgumentException("본인 게시글은 신고할 수 없습니다.");
+            throw new AppException(CommonErrorCode.ACCESS_DENIED, "본인 게시글은 신고할 수 없습니다.");
         }
     }
 
-    public ReportPriority assessPriority(Long reporterId,
-                                         BoardReportReason reason,
+    public ReportPriority assessPriority(BoardReportCreateCommand command,
                                          ReporterReportVolume reporterVolume) {
         boolean suspicious = isSuspiciousReportVolume(reporterVolume);
         return new ReportPriority(
-                applySuspiciousPenalty(calculatePriorityScore(reporterId, reason), suspicious),
+                applySuspiciousPenalty(calculatePriorityScore(command.reporterId(), command.reason()), suspicious),
                 suspicious
         );
     }
@@ -107,13 +107,26 @@ public class BoardReportPolicy {
     }
 
     private int calculatePriorityScore(Long reporterId, BoardReportReason reason) {
-        int reasonScore = switch (reason) {
-            case PERSONAL_INFO -> 95;
-            case ABUSE -> 80;
-            case OBSCENE -> 75;
-            case SPAM -> 55;
-            case OTHER -> 50;
-        };
+        int reasonScore;
+        switch (reason) {
+            case PERSONAL_INFO:
+                reasonScore = 95;
+                break;
+            case ABUSE:
+                reasonScore = 80;
+                break;
+            case OBSCENE:
+                reasonScore = 75;
+                break;
+            case SPAM:
+                reasonScore = 55;
+                break;
+            case OTHER:
+                reasonScore = 50;
+                break;
+            default:
+                throw new IllegalArgumentException("지원하지 않는 신고 사유입니다.");
+        }
 
         long activeBoardCount = boardRepository.countByAccountIdAndState(reporterId, SoftDeleteState.ACTIVE);
         long activeCommentCount = commentsRepository.countByAccountIdAndState(reporterId, SoftDeleteState.ACTIVE);
@@ -131,9 +144,90 @@ public class BoardReportPolicy {
         return Math.max(priorityScore - 15, 0);
     }
 
-    public record ReporterReportVolume(long recentTenMinuteCount, long recentDailyCount) {
+    public static final class ReporterReportVolume {
+        private final long recentTenMinuteCount;
+        private final long recentDailyCount;
+
+        public ReporterReportVolume(long recentTenMinuteCount, long recentDailyCount) {
+            this.recentTenMinuteCount = recentTenMinuteCount;
+            this.recentDailyCount = recentDailyCount;
+        }
+
+        public long recentTenMinuteCount() {
+            return recentTenMinuteCount;
+        }
+
+        public long getRecentTenMinuteCount() {
+            return recentTenMinuteCount;
+        }
+
+        public long recentDailyCount() {
+            return recentDailyCount;
+        }
+
+        public long getRecentDailyCount() {
+            return recentDailyCount;
+        }
+
+        @Override
+        public boolean equals(Object other) {
+            if (this == other) {
+                return true;
+            }
+            if (!(other instanceof ReporterReportVolume)) {
+                return false;
+            }
+            ReporterReportVolume that = (ReporterReportVolume) other;
+            return recentTenMinuteCount == that.recentTenMinuteCount
+                    && recentDailyCount == that.recentDailyCount;
+        }
+
+        @Override
+        public int hashCode() {
+            return Objects.hash(recentTenMinuteCount, recentDailyCount);
+        }
     }
 
-    public record ReportPriority(int score, boolean suspicious) {
+    public static final class ReportPriority {
+        private final int score;
+        private final boolean suspicious;
+
+        public ReportPriority(int score, boolean suspicious) {
+            this.score = score;
+            this.suspicious = suspicious;
+        }
+
+        public int score() {
+            return score;
+        }
+
+        public int getScore() {
+            return score;
+        }
+
+        public boolean suspicious() {
+            return suspicious;
+        }
+
+        public boolean isSuspicious() {
+            return suspicious;
+        }
+
+        @Override
+        public boolean equals(Object other) {
+            if (this == other) {
+                return true;
+            }
+            if (!(other instanceof ReportPriority)) {
+                return false;
+            }
+            ReportPriority that = (ReportPriority) other;
+            return score == that.score && suspicious == that.suspicious;
+        }
+
+        @Override
+        public int hashCode() {
+            return Objects.hash(score, suspicious);
+        }
     }
 }
